--- a/changelog
+++ b/changelog
@@ -1,6 +1,6 @@
 ###
-### Inline Text Editing [VERSION] Change Log
-### [DATE]
+### Inline Text Editing 1.3 Change Log
+### April 26, 2010
 ### Corey Hart @ http://www.codenothing.com
 ###
 
